--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <EditText
         android:id="@+id/input"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:gravity="right"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        android:hint="0"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="horizontal">
+
 
         <Button
             android:id="@+id/clear"
@@ -61,6 +65,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/num7"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -111,21 +116,24 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="5" />
+            android:text="5"
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/num6"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="6"/>
+            android:text="6"
+            android:textSize="25sp" />
 
         <Button
-            android:id="@+id/charadd"
+            android:id="@+id/add"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="+"/>
+            android:text="+"
+            android:textSize="25sp" />
 
     </LinearLayout>
     <LinearLayout
@@ -143,13 +151,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="1"/>
+                android:text="1"
+                android:textSize="25sp" />
             <Button
-                android:id="@+id/mod"
+                android:id="@+id/change"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="%" />
+                android:text="..."
+                android:textSize="25sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
@@ -161,13 +171,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="2" />
+                android:text="2"
+                android:textSize="25sp" />
             <Button
                 android:id="@+id/num0"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="0" />
+                android:text="0"
+                android:textSize="25sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
@@ -180,14 +192,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="3" />
+                android:text="3"
+                android:textSize="25sp" />
 
             <Button
                 android:id="@+id/point"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="." />
+                android:text="."
+                android:textSize="25sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
@@ -199,7 +213,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="=" />
+                android:text="="
+                android:textSize="25sp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
