--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="1/x"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/kuohao_left"
@@ -37,7 +37,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="("
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/kuohao_right"
@@ -45,7 +45,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text=")"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/clear"
@@ -53,7 +53,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="C"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/chu"
@@ -61,7 +61,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="÷"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/cheng"
@@ -69,7 +69,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="*"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/delete"
@@ -78,7 +78,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="DEL"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
     </LinearLayout>
 
@@ -94,7 +94,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="sin"
-            android:textSize="25sp"
+            android:textSize="10sp"
             android:textAllCaps="false"/>
 
         <Button
@@ -103,7 +103,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="cos"
-            android:textSize="25sp"
+            android:textSize="10sp"
             android:textAllCaps="false"/>
 
         <Button
@@ -112,7 +112,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="tan"
-            android:textSize="25sp"
+            android:textSize="10sp"
             android:textAllCaps="false"/>
 
         <Button
@@ -121,7 +121,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="7"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/num8"
@@ -129,7 +129,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="8"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/num9"
@@ -137,7 +137,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="9"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/charjian"
@@ -145,7 +145,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="-"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -155,12 +155,12 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/squarea"
+            android:id="@+id/mi"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="x^2"
-            android:textSize="25sp" />
+            android:text="x^y"
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/cude"
@@ -168,7 +168,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="x^3"
-            android:textSize="25sp"
+            android:textSize="10sp"
             android:textAllCaps="false"/>
 
         <Button
@@ -177,7 +177,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text=""
-            android:textSize="25sp"
+            android:textSize="10sp"
             android:textAllCaps="false"/>
 
         <Button
@@ -186,7 +186,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="4"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/num5"
@@ -194,7 +194,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="5"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/num6"
@@ -202,7 +202,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="6"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
         <Button
             android:id="@+id/add"
@@ -210,7 +210,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="+"
-            android:textSize="25sp" />
+            android:textSize="10sp" />
 
     </LinearLayout>
 
@@ -233,16 +233,16 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="log"
-                android:textSize="25sp"
+                android:textSize="10sp"
                 android:textAllCaps="false"/>
 
             <Button
-                android:id="@+id/change"
+                android:id="@+id/function"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="..."
-                android:textSize="25sp" />
+                android:textSize="10sp" />
 
         </LinearLayout>
         <LinearLayout
@@ -257,7 +257,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="ln"
-                android:textSize="25sp"
+                android:textSize="10sp"
                 android:textAllCaps="false"/>>
 
             <Button
@@ -266,7 +266,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="n!"
-                android:textSize="25sp"
+                android:textSize="10sp"
                 android:textAllCaps="false"/>
 
         </LinearLayout>
@@ -277,12 +277,12 @@
             android:orientation="vertical">
 
             <Button
-            android:id="@+id/pai"
+            android:id="@+id/PI"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="Π"
-            android:textSize="25sp" />>
+            android:textSize="10sp" />>
 
             <Button
                 android:id="@+id/e"
@@ -290,7 +290,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="e"
-                android:textSize="25sp"
+                android:textSize="10sp"
                 android:textAllCaps="false"/>
         </LinearLayout>
 
@@ -308,14 +308,14 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="1"
-                android:textSize="25sp" />
+                android:textSize="10sp" />
             <Button
                 android:id="@+id/mod"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="%"
-                android:textSize="25sp" />
+                android:textSize="10sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -329,14 +329,14 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="2"
-                android:textSize="25sp" />
+                android:textSize="10sp" />
             <Button
                 android:id="@+id/num0"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="0"
-                android:textSize="25sp" />
+                android:textSize="10sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
@@ -350,7 +350,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="3"
-                android:textSize="25sp" />
+                android:textSize="10sp" />
 
             <Button
                 android:id="@+id/point"
@@ -358,7 +358,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="."
-                android:textSize="25sp" />
+                android:textSize="10sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -372,7 +372,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="="
-                android:textSize="25sp" />
+                android:textSize="10sp" />
         </LinearLayout>
 
     </LinearLayout>
