--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -157,7 +157,7 @@
         <Button
             android:id="@+id/mi"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="71dp"
             android:layout_weight="1"
             android:text="x^y"
             android:textSize="10sp" />
@@ -232,7 +232,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="log"
+                android:text="lg"
                 android:textSize="10sp"
                 android:textAllCaps="false"/>
 
